Minor list items layout issues

--- a/public/stylesheets/sass/shop_list.sass
+++ b/public/stylesheets/sass/shop_list.sass
@@ -115,8 +115,11 @@ body
     #listItems
       .newArticle
         font-size: 0.6em
+        display: inline-block
+
         a.setPrice
           display: block
+          clear: both
 
         .priceForm
           display: none
